[package]
name = "braise"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Run tasks like a chef !"
repository = "https://github.com/cestef/braise"
readme = "README.md"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.8", features = [
    "derive",
    "cargo",
    "wrap_help",
    "string",
] }
color-eyre = "0.6.3"
dirs = "5.0.1"
human-panic = "2.0.0"
lazy_static = "1.5.0"
paris = { version = "1.5.15", features = ["macros"] }
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
strip-ansi-escapes = "0.2.0"
thiserror = "1.0.61"
toml = "0.8.14"
