[package]
name = "braise"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE"
description = "Run your tasks like a chef !"
homepage = "https://github.com/cestef/braise"
repository = "https://github.com/cestef/braise"
readme = "README.md"
authors = ["cstef <root@cstef.dev>"]

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.8", features = [
    "derive",
    "cargo",
    "wrap_help",
    "string",
] }
color-eyre = "0.6.3"
dirs = "5.0.1"
human-panic = "2.0.0"
lazy_static = "1.5.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
strip-ansi-escapes = "0.2.0"
thiserror = "1.0.61"
toml = "0.8.14"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.17.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "cestef/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
[workspace.metadata.dist.bin-aliases]
"braise" = ["br"]
